@@ -17,12 +17,16 @@ class ProcessOrGroupName(unittest.TestCase):
         name = " foo\t"
         self.assertEqual(self._callFUT(name), "foo")
 
-    def test_disallows_inner_spaces(self):
+    def test_disallows_inner_spaces_for_eventlister_protocol(self):
         name = "foo bar"
         self.assertRaises(ValueError, self._callFUT, name)
 
-    def test_disallows_colons(self):
+    def test_disallows_colons_for_eventlistener_protocol(self):
         name = "foo:bar"
+        self.assertRaises(ValueError, self._callFUT, name)
+
+    def test_disallows_slashes_for_web_ui_urls(self):
+        name = "foo/bar"
         self.assertRaises(ValueError, self._callFUT, name)
 
 class IntegerTests(unittest.TestCase):
